--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
   width: 1024px;
   background-color: azure;
   position: relative;
+  margin: 0 auto;
+  padding: 20px;
 }
 
 .cv-photo {
@@ -10,4 +12,12 @@
   height: 300px;
   left: 70%;
   top: 3%;
+}
+
+.cv-code-area {
+  background-color: cornsilk;
+}
+
+.cv-code-comments {
+  color: green;
 }
